--- a/styles/index.css
+++ b/styles/index.css
@@ -47,26 +47,40 @@ img {
   width: 2.5rem;
   border-radius: 50%;
   border: 1px solid #559ac8;
+  background-color:whitesmoke;
+  z-index: 1;
 }
-@media only screen and (max-width: 25em) {
+
+.border_top {
+  min-width: 80%;
+  height: 0.1px;
+  color:#559ac8;
+  border-bottom: 2.5px dashed #559ac8;
+  position: absolute;
+  top: 14rem;
+  left: 10%;
+}
+
+@media only screen and (max-width: 28em) {
   .header_nav ul {
     display: grid;
     grid-template-columns: 1fr;
     justify-content: center;
   }
+
   .btn {
+    padding: 0.5rem;
+    margin: 0;
     width: 200%;
   }
 
   .arrow-down {
     top: 20rem;
+    left: 48%;
   }
-}
 
-@media only screen and (max-width: 28em) {
-  .btn {
-    padding: 0.5rem;
-    margin: 0;
+  .border_top {
+    top: 21.5rem;
   }
 }
 
